Fixed some style on firefox

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -224,11 +224,9 @@ ul#strength {
 
 .maincover {
     margin-top: -150px;
-    text-align: center;
-
-    img {
-        width: 100%;
-        padding-left: 4px;
-        padding-right: 4px;
-    }
+    background-image: url("../images/couverture.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 400px;
 }
